2003-02-28  Peter Bienstman <Peter.Bienstman@rug.ac.be>

	* field.py: New test.
	* fw_bw.py: Ditto.
	* slab.py: Ditto.

2003-02-05  Peter Bienstman <Peter.Bienstman@rug.ac.be>

	* stack1.py: New test.

2003-01-31  Peter Bienstman <Peter.Bienstman@rug.ac.be>

	* stack0.py: New test.

2002-10-30  Peter Bienstman <Peter.Bienstman@rug.ac.be>

	* coupled.py: New test.

2002-06-06  Peter Bienstman <Peter.Bienstman@rug.ac.be>

	* dent.py: New test.

2002-06-05  Peter Bienstman <Peter.Bienstman@rug.ac.be>

	* wg.py: New test.

2002-06-04  Peter Bienstman <Peter.Bienstman@rug.ac.be>

	* grating2.py: New test.
	* polariton.py: Ditto.
	* Gaussian.py: Ditto.

2002-05-29  Peter Bienstman <Peter.Bienstman@rug.ac.be>

	* TEM_field.py: New test.

2002-05-13  Peter Bienstman <Peter.Bienstman@rug.ac.be>

	* taper.py: New test.

2002-05-09  Peter Bienstman <Peter.Bienstman@rug.ac.be>

	* infstack.py: New test.

2002-05-07  Peter Bienstman <Peter.Bienstman@rug.ac.be>

	* precision.py: New test.
	* expression.py: Add more tests.

2002-05-06  Peter Bienstman <Peter.Bienstman@rug.ac.be>

	* ADR_test.py: New test.

2002-05-06  Peter Bienstman <Peter.Bienstman@rug.ac.be>

	* degenerate.py: New test.

2002-04-30  Peter Bienstman <Peter.Bienstman@rug.ac.be>

	* Improve output for all tests.

2002-04-29  Peter Bienstman <Peter.Bienstman@rug.ac.be>

	* metal_splitter.py: New test.
	* cladding.py: New test.
	* grating.py: New test.
	* expressions: New test.

2002-02-13  Lieven Vanholme  <Lieven.Vanholme@rug.ac.be>

        * PhC_splitter.py: Update for new Blochsolver.

2001-10-30  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * blazed_grating.py: Use relative instead of absolute precision.
	* substacks.py: Ditto.
	* planarTE.py: Ditto.
	* planarTM.py: Ditto.
	* VCSEL.py: Ditto.
	* SpE.py: Ditto.
	* PhC_splitter.py: Ditto.

2001-10-02  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * eps.py: Relax precision.
