@@ -10,8 +10,9 @@ import unittest
 
 import blazed_grating, substacks, planarTE, planarTM, VCSEL, SpE, \
        PhC_splitter, expressions, cladding, grating, coupled, field, \
-       degenerate, precision, infstack, taper, rods, slab, fw_bw, \
-       TEM_field, grating2, polariton, gaussian, wg, dent, stack0, stack1
+       degenerate, precision, infstack, taper, rods, slab, slab2, fw_bw, \
+       TEM_field, grating2, polariton, gaussian, wg, dent, stack0, stack1, \
+       stack2, degenerate2, grating3
 
 alltests = unittest.TestSuite((blazed_grating.suite, substacks.suite, 
        planarTE.suite, planarTM.suite, VCSEL.suite, SpE.suite, fw_bw.suite,
@@ -19,7 +20,8 @@ alltests = unittest.TestSuite((blazed_grating.suite, substacks.suite,
        cladding.suite, grating.suite, degenerate.suite, stack0.suite,
        precision.suite, infstack.suite, taper.suite, rods.suite, wg.suite,
        TEM_field.suite, grating2.suite, polariton.suite, gaussian.suite,
-       dent.suite, stack1.suite, field.suite))
+       dent.suite, stack1.suite, field.suite, slab2.suite, stack2.suite,
+       degenerate2.suite, grating3.suite))
 
 if __name__ == "__main__":
     r = unittest.TextTestRunner()
